remove tox env variable from creating coverage.xml

--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@ envlist = py27
 commands =
     mkdir -p junit
     make style-verbose
-    py.test -v --junitxml=junit/pytest-{envname}.xml --cov-report term-missing --cov-report xml --cov {envsitepackagesdir}/libtree tests
+    py.test -v --junitxml=junit/pytest-{envname}.xml --cov-report term-missing --cov-report xml --cov libtree tests
 deps =
     dont-fudge-up
     flake8
