remove mysql support

--- a/tox.ini
+++ b/tox.ini
@@ -7,12 +7,9 @@ commands =
     make style-verbose
     py.test -v --junitxml=junit/pytest-{envname}.xml --cov-report term-missing --cov-report xml --cov libtree tests
 deps =
-    py27-all: mysql==0.0.1
-    py27-all: psycopg2==2.6.1
-    py27-mysql: mysql==0.0.1
-    py27-postgres: psycopg2==2.6.1
     dont-fudge-up
     flake8
+    psycopg2==2.6.1
     pytest
     pytest-cov
 
