add sphinx to tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -16,3 +16,8 @@ deps =
 whitelist_externals =
     make
     mkdir
+
+[testenv:docs]
+deps = sphinx
+commands = make docs
+whitelist_externals = make
