--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,6 @@ install:
     - pip install .
     - pip install coveralls
 script:
-    - py.test -v tests
+    - make unit
 after_success:
     - coveralls
