--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_script:
   - psql -c 'create database test_libtree;' -U postgres
 install:
     - pip install .
-    - pip install coveralls
+    - pip install coveralls pytest-cov
 script:
     - make unit
 after_success:
