Revert manual installing of PostgreSQL 9.5 as it breaks the build, wait until Travis supports it

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,10 @@ python:
     - "3.5"
     - "pypy"
     - "pypy3"
-before_install:
-  - sudo /etc/init.d/postgresql stop
-  - wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | sudo apt-key add -
-  - sudo sh -c 'echo "deb http://apt.postgresql.org/pub/repos/apt/ precise-pgdg main 9.5" >> /etc/apt/sources.list.d/postgresql.list'
-  - sudo apt-get update
-  - sudo apt-get install postgresql-9.5
+services:
+    - postgresql
+addons:
+    postgresql: "9.5"
 before_script:
     - psql -c 'create database test_libtree;' -U postgres
 install:
