--- a/.travis.yml
+++ b/.travis.yml
@@ -16,15 +16,14 @@ python:
 # Custom PostgreSQL 9.5:
 sudo: required
 before_install:
-    - wget https://gist.github.com/petere/5893799/raw/apt.postgresql.org.sh
-    - wget https://gist.github.com/petere/6023944/raw/pg-travis-test.sh
-    - sudo sh ./apt.postgresql.org.sh
-env:
-    - PGVERSION=9.5
+  - sudo /etc/init.d/postgresql stop
+  - wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | sudo apt-key add -
+  - sudo sh -c 'echo "deb http://apt.postgresql.org/pub/repos/apt/ precise-pgdg main 9.5" >> /etc/apt/sources.list.d/postgresql.list'
+  - sudo apt-get update
+  - sudo apt-get install postgresql-9.5
 
 
 before_script:
-    - bash ./pg-travis-test.sh  # Install PostgreSQL 9.5
     - psql -c 'create database test_libtree;' -U postgres
 install:
     - pip install .
