--- a/.travis.yml
+++ b/.travis.yml
@@ -16,16 +16,18 @@ python:
 # Custom PostgreSQL 9.5:
 sudo: required
 before_install:
-  - sudo /etc/init.d/postgresql stop
-  - wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | sudo apt-key add -
-  - sudo sh -c 'echo "deb http://apt.postgresql.org/pub/repos/apt/ precise-pgdg main 9.5" >> /etc/apt/sources.list.d/postgresql.list'
-  - sudo apt-get update
-  - sudo apt-get remove --purge postgresql-9.2 postgresql-9.3 postgresql-9.4
-  - sudo apt-get install postgresql-9.5
-
+    - sudo /etc/init.d/postgresql stop
+    - wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | sudo apt-key add -
+    - sudo sh -c 'echo "deb http://apt.postgresql.org/pub/repos/apt/ precise-pgdg main 9.5" >> /etc/apt/sources.list.d/postgresql.list'
+    - sudo apt-get update
+    - sudo apt-get remove --purge postgresql-9.2 postgresql-9.3 postgresql-9.4
+    - sudo apt-get install postgresql-9.5
+env:
+    - PGPORT=5433
+    - PGHOST=localhost
 
 before_script:
-    - psql -c 'create database test_libtree;' -U postgres -h localhost
+    - psql -c 'create database test_libtree;' -U postgres
 install:
     - pip install .
     - pip install coveralls pytest-cov
