--- a/.travis.yml
+++ b/.travis.yml
@@ -15,18 +15,20 @@ python:
 
 # Custom PostgreSQL 9.5:
 sudo: required
-before_install:
-    - sudo /etc/init.d/postgresql stop
-    - wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | sudo apt-key add -
-    - sudo sh -c 'echo "deb http://apt.postgresql.org/pub/repos/apt/ precise-pgdg main 9.5" >> /etc/apt/sources.list.d/postgresql.list'
-    - sudo apt-get update
-    - sudo apt-get remove --purge postgresql-9.2 postgresql-9.3 postgresql-9.4
-    - sudo apt-get install postgresql-9.5
 env:
-    - PGPORT=5433
-    - PGHOST=localhost
+    - PGPORT=5433 PGHOST=localhost
+addons:
+    apt:
+        sources:
+            - precise-pgdg-9.5
+        packages:
+            - postgresql-9.5
+            - postgresql-contrib-9.5
+    postgresql: 9.5
 
 before_script:
+    - sudo cp /etc/postgresql/9.4/main/pg_hba.conf /etc/postgresql/9.5/main/pg_hba.conf
+    - sudo /etc/init.d/postgresql restart
     - psql -c 'create database test_libtree;' -U postgres
 install:
     - pip install .
