--- a/tox.ini
+++ b/tox.ini
@@ -13,6 +13,12 @@ deps =
     psycopg2==2.6.1
     pytest
     pytest-cov
+passenv =
+    PGHOST
+    PGPORT
+    PGUSER
+    PGPASSWORD
+    PGDATABASE
 
 whitelist_externals =
     make
